oggdemux: fix artifacts at chain boundaries

https://bugzilla.gnome.org/show_bug.cgi?id=782132